# meteorological-playground

./: .gitignore  pyproject.toml
notebook/: get_amedas.ipynb
